--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body class="body">
-  <main>
+  <header>
     <h1 class="main--title"><span>The Internet Is</span><span>Made of Cats</span></h1>
     <p class="main--p">Figeant notre esprit critique derrière un sourire idiot, les cyberchats étendent peu à peu leur
       contrôle sur le
       réseau,
       sinon sur le monde. Revue de détail du chat-dow governement.
     </p>
+  </header>
+  <main>
     <article>
       <h2>Ministre du logement : Maru</h2>
       <img src="./img/maru.jpg" alt="Maru">
