setup hunter x hunter project

--- a/index.html
+++ b/index.html
@@ -5,80 +5,55 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg+xml" href="/vite.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1 - welcome</title>
+  <title>3 - hunter X hunter</title>
 </head>
 
-<body class="body">
+<body>
   <header>
-    <h1>Hello World ! Bienvenue à Eden School</h1>
     <nav>
-      <ul class="no-style">
-        <li><a href="#front">L'intégration(front)</a></li>
-        <li><a href="#backend">Le développement(backend)</a></li>
-        <li><a href="#css">peu de css</a></li>
+      <img src="./img/logo.png" alt="hunter hunter logo">
+      <h1>hunter x hunter</h1>
+      <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
-      <h2>Au cours de cette année nous allons avoir 2 matières :</h2>
-      <section>
-        <h3 id="front">L'integration</h3>
-        <article>
-          <h4>Le HTML :</h4>
-          <img src="./img/html.png" alt="html">
-          <p>Le HTML sert à créer le contenu et la structure du site : elle va contenir uniquement la partie textuelle
-            du site.</p>
-        </article>
-        <article>
-          <h4>Le CSS :</h4>
-          <img src="./img/css.jpg" alt="css">
-          <p>Le CSS va nous permettre d'ajouter une mise en forme à notre site : les couleurs,les formes,le fond,etc...
-          </p>
-        </article>
-      </section>
-      <section>
-        <h3 id="backend">Le développement</h3>
-        <article>
-          <h4>Le Javascript :</h4>
-          <img src="./img/js.jpg" alt="js">
-          <p>Javascript est un language de programmation de script employé pour rendre une page web interactive. Le
-            comportement de la page et son apparence pourront varier en fonction de certains paramètres.</p>
-        </article>
-      </section>
+      <h2><iconify-icon icon="logos:angellist"></iconify-icon>hunter x hunter</h2>
+      <img src="./img/hxh1.png" alt="hunter x hunter">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum quibusdam earum mollitia, necessitatibus rem
+        reprehenderit magni ullam unde illo blanditiis? Dicta quisquam beatae eveniet iusto vitae veniam ullam voluptate
+        sed.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis animi necessitatibus ex ipsa consequuntur
+        delectus reiciendis, assumenda illo ad amet explicabo aliquid possimus eius eligendi fugit error provident?
+        Asperiores, incidunt.
+      </p>
+      <div class="read-more">
+        <a href="#">read more</a>
+      </div>
     </section>
-    <hr>
     <section>
-      <h2 id="css">Et ici,nous allons un peu jouer avec le CSS !</h2>
-      <ul class="arial">
-        <li class="bold lg">
-          <p>Les couleurs du texte: <span class="grey">Et ma police est Arial !</span></p>
-        </li>
-        <li class="tomato">
-          <p>ce paragraphe est rouge.</p>
-        </li>
-        <li class="aquamarine">
-          <p>Ce paragraphe est blue.</p>
-        </li>
-        <li class="goldenrod">
-          <p>Ce paragraphe est vert.</p>
-        </li>
-      </ul>
+      <h2><iconify-icon icon="logos:angellist"></iconify-icon>
+        hunter x hunter</h2>
+      <img src="./img/hxh2.png" alt="hunter x hunter">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum quibusdam earum mollitia, necessitatibus rem
+        reprehenderit magni ullam unde illo blanditiis? Dicta quisquam beatae eveniet iusto vitae veniam ullam voluptate
+        sed.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis animi necessitatibus ex ipsa consequuntur
+        delectus reiciendis, assumenda illo ad amet explicabo aliquid possimus eius eligendi fugit error provident?
+        Asperiores, incidunt.
+      </p>
       <ul>
-        <li class="no-list-style cursive lg">Les couleurs de fond : <span>Et ma police est cursive !</span></li>
-        <li>
-          <p class="bg-tomato no-margin">Ce paragraphe est rouge.</p>
-        </li>
-        <li>
-          <p class="bg-aquamarine no-margin">Ce paragraphe est blue.</p>
-        </li>
-        <li>
-          <p class="bg-goldenrod no-margin">Ce paragraphe est vert.</p>
-        </li>
+        <li>test</li>
       </ul>
+      <div class="read-more">
+        <a href="#">read more</a>
+      </div>
     </section>
   </main>
-  <footer><img src="./img/logovert.png" alt="eden school"><small>copyright Eden School</small></footer>
   <script type="module" src="/main.js"></script>
 </body>
 
