--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
     </section>
   </main>
+  <footer><img src="./img/logovert.png" alt="logo eden school"><small>copyright Eden School</small></footer>
   <script type="module" src="/main.js"></script>
 </body>
 
