update icon spacement

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
       </div>
     </section>
     <section>
-      <h2><iconify-icon icon="logos:angellist"></iconify-icon>
-        hunter x hunter</h2>
+      <h2><iconify-icon icon="logos:angellist"></iconify-icon>hunter x hunter</h2>
       <img src="./img/hxh2.png" alt="hunter x hunter">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum quibusdam earum mollitia, necessitatibus rem
         reprehenderit magni ullam unde illo blanditiis? Dicta quisquam beatae eveniet iusto vitae veniam ullam voluptate
