--- a/index.html
+++ b/index.html
@@ -5,55 +5,115 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg+xml" href="/vite.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3 - hunter X hunter</title>
+  <title>4 - backups</title>
 </head>
 
 <body>
   <header>
     <nav>
-      <img src="./img/logo.png" alt="hunter hunter logo">
-      <h1>hunter x hunter</h1>
+      <img src="./img/logo.png" alt="">
       <ul>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
+        <li><a href="#who">who ?</a></li>
+        <li><a href="#how">how ?</a></li>
+        <li><a href="#why">why ?</a></li>
+        <li><a href="#when">when ?</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section>
-      <h2><iconify-icon icon="logos:angellist"></iconify-icon>hunter x hunter</h2>
-      <img src="./img/hxh1.png" alt="hunter x hunter">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum quibusdam earum mollitia, necessitatibus rem
-        reprehenderit magni ullam unde illo blanditiis? Dicta quisquam beatae eveniet iusto vitae veniam ullam voluptate
-        sed.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis animi necessitatibus ex ipsa consequuntur
-        delectus reiciendis, assumenda illo ad amet explicabo aliquid possimus eius eligendi fugit error provident?
-        Asperiores, incidunt.
-      </p>
-      <div class="read-more">
-        <a href="#">read more</a>
-      </div>
-    </section>
-    <section>
-      <h2><iconify-icon icon="logos:angellist"></iconify-icon>
-        hunter x hunter</h2>
-      <img src="./img/hxh2.png" alt="hunter x hunter">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum quibusdam earum mollitia, necessitatibus rem
-        reprehenderit magni ullam unde illo blanditiis? Dicta quisquam beatae eveniet iusto vitae veniam ullam voluptate
-        sed.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis animi necessitatibus ex ipsa consequuntur
-        delectus reiciendis, assumenda illo ad amet explicabo aliquid possimus eius eligendi fugit error provident?
-        Asperiores, incidunt.
-      </p>
-      <ul>
-        <li>test</li>
-      </ul>
-      <div class="read-more">
-        <a href="#">read more</a>
-      </div>
-    </section>
+    <h1>backups, backups everywhere !</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/lRQquOQxiMc" title="YouTube video player"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
+    <p>Pourquoi sauvegarder ? Drôle de question ! A l’heure actuelle, la
+      sauvegarde, ou plutôt les sauvegardes, apparaissent comme des
+      actions incontournables pour l’ensemble des données critiques qu’il ne
+      faudrait surtout pas perdre, sans quoi c’est la pérennité même de
+      l’entreprise qui pourrait en pâtir. Ces dernières transitent par différents
+
+      moyens, et parfois même sur différents supports.</p>
+    <p>Chaque mois, plusieurs piratages de sociétés importantes ont lieu.
+      Nous pouvons reprendre l’exemple de stars possédant un compte
+      iCloud ou encore, plus problématique, de Dropbox où 7 millions
+      d’identifiants et mots de passe ont été récupérés. Un piratage de
+      données consiste généralement par trouver les accès (identifiants,
+      noms d’utilisateurs et mots de passe) puis à les diffuser à des sites peu
+      fiables ou sur des réseaux sociaux pour en faire une utilisation
+      malsaine.</p>
+    <p>Les erreurs humaines et défaillances techniques sont aussi des sources
+      importantes de pertes de données. La question n’est plus de savoir
+      pourquoi sauvegarder mais comment faut-il s’y prendre.</p>
+    <p>Nous allons aborder deux types de sauvegarde qui diffèrent en fonction
+      de leurs fichiers et des besoins de l’utilisateur.</p>
+    <div class="backups_stats">
+      <section class="backups">
+        <h2>no backups,<span class="text-grey"> no mercy</span></h2>
+        <div>
+          <article>
+            <h3><iconify-icon icon="fa6-regular:floppy-disk"></iconify-icon>locale<iconify-icon
+                icon="fa6-regular:floppy-disk"></iconify-icon></h3>
+            <img src="./img/backup1.jpg" alt="">
+            <p>Plusieurs supports sont disponibles pour de la sauvegarde locale. Cette
+              sauvegarde permet d’avoir les données « près de soi », que ce soit sur
+              un disque dur externe (quand nous parlons d’une sauvegarde, nous
+              partons du principe qu’il s’agit de mettre les données sur un support
+              externe à l’ordinateur même). C’est pourquoi la sauvegarde locale est
+              un excellent moyen de sauvegarde et fait partie d’un des plus surs.
+              Pour effectuer la sauvegarde locale, plusieurs supports sont disponibles
+              : on pense notamment aux disques durs externes, mais également aux
+              serveurs (NAS entre autres) qui permettent d’avoir le support à
+              domicile. Il est aussi possible d’avoir recours aux clefs USB, mais qui
+              limitent un peu plus la quantité à sauvegarder.
+              N’hésitez pas à utiliser des outils adaptés de sauvegarde en fonction de
+              votre système d’exploitation de l’ordinateur, de vos serveurs et à les
+              paramétrer correctement.</p>
+            <div class="buttons-read"><a href="#" class="btn-read">read more<iconify-icon
+                  icon="fa-solid:heart-broken"></iconify-icon></a></div>
+          </article>
+          <article>
+            <h3><iconify-icon icon="fa6-regular:floppy-disk"></iconify-icon>cloud<iconify-icon
+                icon="fa6-regular:floppy-disk"></iconify-icon></h3>
+            <img src="./img/backup2.jpg" alt="">
+            <p>Oui, c’est quoi un Cloud ? Un Cloud se traduit littéralement par nuage.
+              C’est un système de sauvegarde qui devient de plus en plus utilisé, qui
+              a ses avantages tout comme ses inconvénients. Les avantages sont
+              multiples, en voici une liste non-exhaustive :</p>
+            <ul>
+              <li>Récupération des données plus rapide</li>
+              <li>Mises à jour de logicielles automatiques sur les serveurs</li>
+              <li>Travail collaboratif de meilleur qualité</li>
+              <li>Flexibilité mobile</li>
+            </ul>
+            <p>Tous ces atouts permettent d’apporter une vraie plus-value à la
+              sauvegarde en ligne.</p>
+            <div class="buttons-read"><a href="#" class="btn-read">read more<iconify-icon
+                  icon="fa-solid:heart-broken"></iconify-icon></a></div>
+          </article>
+        </div>
+      </section>
+      <section class="stats">
+        <h2><span class="text-grey">data loss</span> is coming</h2>
+        <article>
+          <h3><iconify-icon icon="fa6-regular:face-dizzy"></iconify-icon>18.01.15</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quia earum vitae blanditiis.</p>
+        </article>
+        <article>
+          <h3><iconify-icon icon="fa6-regular:face-dizzy"></iconify-icon>18.01.15</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quia earum vitae blanditiis.</p>
+        </article>
+        <article>
+          <h3><iconify-icon icon="fa6-regular:face-dizzy"></iconify-icon>18.01.15</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quia earum vitae blanditiis.</p>
+        </article>
+        <article>
+          <h3><iconify-icon icon="fa6-regular:face-dizzy"></iconify-icon>18.01.15</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quia earum vitae blanditiis.</p>
+        </article>
+      </section>
+    </div>
   </main>
+  <footer><img src="./img/logovert.png" alt="logo eden school"><small>copyright Eden School</small><small>Source:
+      Extrait du site https://www.rcb-informatique.fr/</small></footer>
   <script type="module" src="/main.js"></script>
 </body>
 
