--- a/index.html
+++ b/index.html
@@ -23,23 +23,84 @@
         sport</span></h1>
   </header>
   <main>
-    <article>
+    <section>
       <h2><span>toutes nos salles de</span><span>sport à Lyon</span>
       </h2>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d10605.78433390193!2d4.853741046978786!3d45.77845685291783!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1679586693136!5m2!1sfr!2sfr"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </article>
-    <!-- <hr> -->
-    <article>
-      <h2><span>lyon6</span><span>foch</span>
-      </h2>
-      <img src="./img/sport1.jpg" alt="sport 1" class="float-left">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perspiciatis necessitatibus rem veniam velit
-        quas, quibusdam consequatur sint dolorum beatae atque odio! Officia iure dolores nesciunt commodi animi
-        molestiae quis.</p>
-    </article>
+      <article>
+        <h2><span>lyon 6</span><span>foch</span>
+        </h2>
+        <div class="content">
+
+          <img src="./img/sport1.jpg" alt="sport 1" class="left">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perspiciatis necessitatibus rem veniam
+            velit
+            quas, quibusdam consequatur sint dolorum beatae atque odio! Officia iure dolores nesciunt commodi animi
+            molestiae quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, earum iusto suscipit, omnis
+            quae
+            quibusdam necessitatibus ex dolore itaque nihil culpa saepe hic quasi quia, consectetur doloribus quidem
+            maiores
+            magnam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aspernatur, voluptatem aut
+            quas
+            eaque quibusdam hic eveniet, aperiam facere voluptatibus minus iure aliquam vel similique in? Eos qui
+            distinctio
+            enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet incidunt, distinctio in modi vel
+            assumenda autem ut? Eos, sequi rerum. Mollitia, aut itaque exercitationem culpa pariatur sequi vel totam
+            omnis!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis unde quae molestiae ipsam facilis mollitia
+            blanditiis quas aliquid numquam excepturi dolore culpa aut error magni dignissimos labore, placeat, corporis
+            tempore!</p>
+        </div>
+      </article>
+      <hr>
+      <article>
+        <h2><span>lyon 5</span><span>vieux lyon</span>
+        </h2>
+        <div class="content">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perspiciatis necessitatibus rem veniam
+            velit
+            quas, quibusdam consequatur sint dolorum beatae atque odio! Officia iure dolores nesciunt commodi animi
+            molestiae quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, earum iusto suscipit, omnis
+            quae
+            quibusdam necessitatibus ex dolore itaque nihil culpa saepe hic quasi quia, consectetur doloribus quidem
+            maiores
+            magnam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aspernatur, voluptatem aut
+            quas
+            eaque quibusdam hic eveniet, aperiam facere voluptatibus minus iure aliquam vel similique in? Eos qui
+            distinctio
+            enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet incidunt, distinctio in modi vel
+            assumenda autem ut? Eos, sequi rerum. Mollitia, aut itaque exercitationem culpa pariatur sequi vel totam
+            omnis!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis unde quae molestiae ipsam facilis mollitia
+            blanditiis quas aliquid numquam excepturi dolore culpa aut error magni dignissimos labore, placeat, corporis
+            tempore!</p>
+          <img src="./img/sport2.jpg" alt="sport 2" class="right">
+        </div>
+      </article>
+      <hr>
+      <article>
+        <h2><span>lyon 2</span><span>bellecour</span>
+        </h2>
+        <div class="content">
+          <img src="./img/sport3.jpg" alt="sport 2" class="left">
+
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perspiciatis necessitatibus rem veniam
+            velit
+            quas, quibusdam consequatur sint dolorum beatae atque odio! Officia iure dolores nesciunt commodi animi
+            molestiae quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, earum iusto suscipit, omnis
+            quae
+            quibusdam necessitatibus ex dolore itaque nihil culpa saepe hic quasi quia, consectetur doloribus quidem
+            maiores
+            magnam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aspernatur, voluptatem aut
+            quas
+            eaque quibusdam hic eveniet, aperiam facere voluptatibus minus iure aliquam vel similique in? Eos qui
+            distinctio</p>
+        </div>
+      </article>
+    </section>
   </main>
   <footer><img src="./img/logovert.png" alt="logo eden school"><small>copyright Eden School</small></footer>
   <script type="module" src="/main.js"></script>
