--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
       </article>
       <hr>
-      <article>
+      <article class="mb-5">
         <h2><span>lyon 2</span><span>bellecour</span>
         </h2>
         <div class="content">
@@ -100,6 +100,41 @@
             distinctio</p>
         </div>
       </article>
+    </section>
+    <section class="testimony">
+      <h2>témoignage</h2>
+      <ul class="testimonys">
+        <li>
+          <article>
+            <h3>anitaM., 19ans</h3>
+            <img src="./img/home/1.png" alt="anita">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident qui quibusdam, perferendis labore
+              perspiciatis corrupti amet itaque impedit! Animi tempora itaque fugit fuga at facilis et? Nulla aperiam
+              eos ut!</p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>marcoS., 23ans</h3>
+            <img src="./img/home/2.png" alt="marco">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima magnam, quaerat voluptatibus eum earum,
+              dolore quisquam amet esse fuga deserunt officiis, ratione praesentium consectetur iure obcaecati ea quia
+              voluptate necessitatibus!</p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>célineD., 32ans</h3>
+            <img src="./img/home/3.png" alt="céline">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, suscipit dignissimos nemo id error ab
+              sed illo, esse facere laboriosam, perspiciatis praesentium cum eligendi fugit delectus non voluptatibus
+              quaerat ea?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, suscipit dignissimos nemo id
+              error ab
+              sed illo, esse facere laboriosam, perspiciatis praesentium cum eligendi fugit delectus non voluptatibus
+              quaerat ea?</p>
+          </article>
+        </li>
+      </ul>
     </section>
   </main>
   <footer><img src="./img/logovert.png" alt="logo eden school"><small>copyright Eden School</small></footer>
