update main html file

--- a/index.html
+++ b/index.html
@@ -24,117 +24,140 @@
   </header>
   <main>
     <section>
-      <h2><span>toutes nos salles de</span><span>sport à Lyon</span>
+      <h2><span>réserver votre place pour le</span><span>prochain cours</span>
       </h2>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d10605.78433390193!2d4.853741046978786!3d45.77845685291783!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1679586693136!5m2!1sfr!2sfr"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <article>
-        <h2><span>lyon 6</span><span>foch</span>
-        </h2>
-        <div class="content">
-
-          <img src="./img/sport1.jpg" alt="sport 1" class="left">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perspiciatis necessitatibus rem veniam
-            velit
-            quas, quibusdam consequatur sint dolorum beatae atque odio! Officia iure dolores nesciunt commodi animi
-            molestiae quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, earum iusto suscipit, omnis
-            quae
-            quibusdam necessitatibus ex dolore itaque nihil culpa saepe hic quasi quia, consectetur doloribus quidem
-            maiores
-            magnam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aspernatur, voluptatem aut
-            quas
-            eaque quibusdam hic eveniet, aperiam facere voluptatibus minus iure aliquam vel similique in? Eos qui
-            distinctio
-            enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet incidunt, distinctio in modi vel
-            assumenda autem ut? Eos, sequi rerum. Mollitia, aut itaque exercitationem culpa pariatur sequi vel totam
-            omnis!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis unde quae molestiae ipsam facilis mollitia
-            blanditiis quas aliquid numquam excepturi dolore culpa aut error magni dignissimos labore, placeat, corporis
-            tempore!</p>
-        </div>
-      </article>
-      <hr>
-      <article>
-        <h2><span>lyon 5</span><span>vieux lyon</span>
-        </h2>
-        <div class="content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perspiciatis necessitatibus rem veniam
-            velit
-            quas, quibusdam consequatur sint dolorum beatae atque odio! Officia iure dolores nesciunt commodi animi
-            molestiae quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, earum iusto suscipit, omnis
-            quae
-            quibusdam necessitatibus ex dolore itaque nihil culpa saepe hic quasi quia, consectetur doloribus quidem
-            maiores
-            magnam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aspernatur, voluptatem aut
-            quas
-            eaque quibusdam hic eveniet, aperiam facere voluptatibus minus iure aliquam vel similique in? Eos qui
-            distinctio
-            enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet incidunt, distinctio in modi vel
-            assumenda autem ut? Eos, sequi rerum. Mollitia, aut itaque exercitationem culpa pariatur sequi vel totam
-            omnis!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis unde quae molestiae ipsam facilis mollitia
-            blanditiis quas aliquid numquam excepturi dolore culpa aut error magni dignissimos labore, placeat, corporis
-            tempore!</p>
-          <img src="./img/sport2.jpg" alt="sport 2" class="right">
-        </div>
-      </article>
-      <hr>
-      <article class="mb-5">
-        <h2><span>lyon 2</span><span>bellecour</span>
-        </h2>
-        <div class="content">
-          <img src="./img/sport3.jpg" alt="sport 2" class="left">
-
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perspiciatis necessitatibus rem veniam
-            velit
-            quas, quibusdam consequatur sint dolorum beatae atque odio! Officia iure dolores nesciunt commodi animi
-            molestiae quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, earum iusto suscipit, omnis
-            quae
-            quibusdam necessitatibus ex dolore itaque nihil culpa saepe hic quasi quia, consectetur doloribus quidem
-            maiores
-            magnam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aspernatur, voluptatem aut
-            quas
-            eaque quibusdam hic eveniet, aperiam facere voluptatibus minus iure aliquam vel similique in? Eos qui
-            distinctio</p>
-        </div>
-      </article>
+      <table>
+        <thead>
+          <tr>
+            <th colspan="3">lyon 6 - Foch</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>05 Janvier 2021</td>
+            <td>15h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>10 Janvier 2021</td>
+            <td>16h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>15 Janvier 2021</td>
+            <td>15h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>20 Janvier 2021</td>
+            <td>16h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <thead>
+          <tr>
+            <th colspan="3">lyon 5 - vieux lyon</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>05 Janvier 2021</td>
+            <td>15h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>10 Janvier 2021</td>
+            <td>16h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>15 Janvier 2021</td>
+            <td>15h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>20 Janvier 2021</td>
+            <td>16h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <thead>
+          <tr>
+            <th colspan="3">lyon 2 - bellecour</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>05 Janvier 2021</td>
+            <td>15h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>10 Janvier 2021</td>
+            <td>16h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>15 Janvier 2021</td>
+            <td>15h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+          <tr>
+            <td>20 Janvier 2021</td>
+            <td>16h30</td>
+            <td><a href="#">réserver ce créneau</a></td>
+          </tr>
+        </tbody>
+      </table>
     </section>
-    <section class="testimony">
-      <h2>témoignage</h2>
-      <ul class="testimonys">
-        <li>
-          <article>
-            <h3>anitaM., 19ans</h3>
-            <img src="./img/home/1.png" alt="anita">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident qui quibusdam, perferendis labore
-              perspiciatis corrupti amet itaque impedit! Animi tempora itaque fugit fuga at facilis et? Nulla aperiam
-              eos ut!</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3>marcoS., 23ans</h3>
-            <img src="./img/home/2.png" alt="marco">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima magnam, quaerat voluptatibus eum earum,
-              dolore quisquam amet esse fuga deserunt officiis, ratione praesentium consectetur iure obcaecati ea quia
-              voluptate necessitatibus!</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3>célineD., 32ans</h3>
-            <img src="./img/home/3.png" alt="céline">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, suscipit dignissimos nemo id error ab
-              sed illo, esse facere laboriosam, perspiciatis praesentium cum eligendi fugit delectus non voluptatibus
-              quaerat ea?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, suscipit dignissimos nemo id
-              error ab
-              sed illo, esse facere laboriosam, perspiciatis praesentium cum eligendi fugit delectus non voluptatibus
-              quaerat ea?</p>
-          </article>
-        </li>
-      </ul>
+    <section class="forms">
+      <h2><span>pour valider votre réservation,</span><span>compléter le formulaire</span></h2>
+      <form action="#">
+        <fieldset>
+          <legend>vos coordonées</legend>
+          <div><label for="name">votre prénom :</label>
+            <input required type="text" name="name" id="name">
+          </div>
+          <div><label for="last-name">votre nom :</label><input required type="text" name="last-name" id="last-name">
+          </div>
+          <div><label for="email">votre email :</label><input required type="email" name="email" id="email"></div>
+        </fieldset>
+        <fieldset>
+          <legend>quel est la raison de votre venu ?</legend>
+          <div>
+            <label for="detendre">besoin de me détendre</label>
+            <input type="checkbox" name="reasons" id="detendre">
+          </div>
+          <div><label for="medecin">mon médecin ma conseillé de venir</label><input type="checkbox" name="reasons"
+              id="medecin"></div>
+          <div><label for="friends">je veux tester avec des amis</label><input type="checkbox" name="reasons"
+              id="friends">
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend>voulez-vous souscrire à notre programme de fidélité ?</legend>
+          <div>
+            <label for="yes">oui</label>
+            <input type="radio" name="fidelity" id="yes" value="true" aria-selected="true">
+          </div>
+          <div><label for="false">non</label><input type="radio" name="fidelity" id="false" value="false">
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend>comment avez-vous connu le yoga ?</legend>
+          <select name="know">
+            <option value="none" hidden disabled selected>choisissez une réponse</option>
+            <option value="internet">par internet</option>
+            <option value="friends">par des amis</option>
+            <option value="school">par l'école</option>
+          </select>
+        </fieldset>
+        <button type="submit">envoyer</button>
+      </form>
     </section>
   </main>
   <footer><img src="./img/logovert.png" alt="logo eden school"><small>copyright Eden School</small></footer>
