update index html file

--- a/index.html
+++ b/index.html
@@ -5,160 +5,191 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg+xml" href="/vite.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>5 - sport</title>
+  <title>7 - cosplay</title>
 </head>
 
 <body>
-  <header>
+  <header><img src="./img/logo.png" alt="logo">
+    <h1>On était au World Cosplay Summit</h1>
     <nav>
       <ul>
-        <li><a href="#"><iconify-icon icon="fa6-solid:fire"></iconify-icon>coaching</a></li>
-        <li><a href="#"><iconify-icon icon="fa6-solid:gears"></iconify-icon>formules</a></li>
-        <li><a href="#"><iconify-icon icon="fa6-regular:hand-spock"></iconify-icon>je m'abonne</a></li>
+        <li class="nav-item">
+          <span>news</span>
+          <ul class="hover-container">
+            <li>
+              <img src="./img/cosplays/cosplay1.png" alt="">
+              <article>
+                <h3>le world cosplay summit</h3>
+                <ul>
+                  <li><a href="#">candy candy</a></li>
+                  <li><a href="#">prix spécial brother</a></li>
+                  <li><a href="#">convention japanim</a></li>
+                  <li><a href="#">concerts de J-Music</a></li>
+                  <li><a href="#">geek animes</a></li>
+                  <li><a href="#">japan Expo</a></li>
+                </ul>
+              </article>
+            </li>
+            <li>
+              <img src="./img/cosplays/cosplay2.png" alt="cosplay2">
+              <article>
+                <h3>tôkyô</h3>
+                <ul>
+                  <li><a href="#">geeks animes</a></li>
+                  <li><a href="#">green Tree Express</a></li>
+                  <li><a href="#">negibose Thailand</a></li>
+                  <li><a href="#">samsung Everland</a></li>
+                  <li><a href="#">fanimeCon</a></li>
+                </ul>
+              </article>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <span>gallery</span>
+          <ul class="hover-container">
+            <li>
+              <img src="./img/cosplays/cosplay3.png" alt="cosplay3">
+              <article>
+                <h3>le world cosplay summit</h3>
+                <ul>
+                  <li><a href="#">candy candy</a></li>
+                  <li><a href="#">prix spécial brother</a></li>
+                </ul>
+              </article>
+              <article>
+                <h3>tôkyô</h3>
+                <ul>
+                  <li><a href="#">geeks animes</a></li>
+                  <li><a href="#">mangas Trip</a></li>
+                  <li><a href="#">negibose Thailand</a></li>
+                  <li><a href="#">samsung Everland</a></li>
+                  <li><a href="#">fanimeCon</a></li>
+                </ul>
+              </article>
+            </li>
+            <li>
+              <img src="./img/cosplays/cosplay4.png" alt="cosplay4">
+              <article>
+                <h3>higashi-ku - nagoya</h3>
+                <ul>
+                  <li><a href="#">mangas</a></li>
+                  <li><a href="#">animes</a></li>
+                  <li><a href="#">tomokasu Sugila</a></li>
+                </ul>
+              </article>
+              <article>
+                <h3>visit japan</h3>
+                <ul>
+                  <li><a href="#">azuma Fukashi0</a></li>
+                  <li><a href="#">ichirou mizuki</a></li>
+                </ul>
+              </article>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <span>press</span>
+          <ul class="hover-container">
+            <li>
+              <img src="./img/cosplays/cosplay5.png" alt="cosplay5">
+              <article>
+                <h3>le world cosplay summit</h3>
+                <ul>
+                  <li><a href="#">candy candy</a></li>
+                  <li><a href="#">prix spécial brother</a></li>
+                  <li><a href="#">convention japanim</a></li>
+                  <li><a href="#">concerts de J-Music</a></li>
+                  <li><a href="#">geeks animes</a></li>
+                </ul>
+              </article>
+            </li>
+            <li>
+              <img src="./img/cosplays/cosplay6.png" alt="cosplay6">
+              <article>
+                <h3>cosplay championship</h3>
+                <ul>
+                  <li><a href="#">geeks animes</a></li>
+                  <li><a href="#">green Tree Express</a></li>
+                  <li><a href="#">negibose Thailand</a></li>
+                  <li><a href="#">samsung Everland</a></li>
+                  <li><a href="#">fanimeCon</a></li>
+                </ul>
+              </article>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item"><span>contact</span>
+          <ul class="hover-container">
+            <li>
+              <img src="./img/cosplays/cosplay7.png" alt="cosplay7">
+              <article>
+                <h3>tôkyô</h3>
+                <ul>
+                  <li><a href="#">negibose Thailand</a></li>
+                  <li><a href="#">samsung Everland</a></li>
+                  <li><a href="#">famineCon</a></li>
+                </ul>
+              </article>
+              <article>
+                <h3>higashi-ku - nagoya</h3>
+                <ul>
+                  <li>mangas</li>
+                  <li>animes</li>
+                  <li>tomokazu Sugita</li>
+                </ul>
+              </article>
+            </li>
+            <li>
+              <img src="./img/cosplays/cosplay8.png" alt="">
+              <article>
+                <h3>visit japan</h3>
+                <ul>
+                  <li><a href="#">azuma Fukashi0</a></li>
+                  <li><a href="#">ichirou Mizuki</a></li>
+                </ul>
+              </article>
+              <article>
+                <h3>le world cosplay summit</h3>
+                <ul>
+                  <li><a href="#">candy candy</a></li>
+                  <li><a href="#">prix spécial Brother</a></li>
+                  <li><a href="#">convention Japanim</a></li>
+                  <li><a href="#">concerts de J-Music</a></li>
+                  <li><a href="#">geeks animes</a></li>
+                  <li><a href="#">japan Expo</a></li>
+                </ul>
+              </article>
+            </li>
+          </ul>
+        </li>
       </ul>
     </nav>
-    <figure class="font-coda">la rentré fitness <span class="text-white">1 mois gratuit !</span></figure>
-    <h1><span class="font-coda text-yellow">sport factory</span><span
-        class="text-white font-norican second-element">salles de
-        sport</span></h1>
   </header>
   <main>
-    <section>
-      <h2><span>réserver votre place pour le</span><span>prochain cours</span>
-      </h2>
-      <table>
-        <thead>
-          <tr>
-            <th colspan="3">lyon 6 - Foch</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>05 Janvier 2021</td>
-            <td>15h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>10 Janvier 2021</td>
-            <td>16h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>15 Janvier 2021</td>
-            <td>15h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>20 Janvier 2021</td>
-            <td>16h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-        </tbody>
-      </table>
-      <table>
-        <thead>
-          <tr>
-            <th colspan="3">lyon 5 - vieux lyon</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>05 Janvier 2021</td>
-            <td>15h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>10 Janvier 2021</td>
-            <td>16h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>15 Janvier 2021</td>
-            <td>15h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>20 Janvier 2021</td>
-            <td>16h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-        </tbody>
-      </table>
-      <table>
-        <thead>
-          <tr>
-            <th colspan="3">lyon 2 - bellecour</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>05 Janvier 2021</td>
-            <td>15h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>10 Janvier 2021</td>
-            <td>16h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>15 Janvier 2021</td>
-            <td>15h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-          <tr>
-            <td>20 Janvier 2021</td>
-            <td>16h30</td>
-            <td><a href="#">réserver ce créneau</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-    <section class="forms">
-      <h2><span>pour valider votre réservation,</span><span>compléter le formulaire</span></h2>
-      <form action="#">
-        <fieldset>
-          <legend>vos coordonées</legend>
-          <div><label for="name">votre prénom :</label>
-            <input required type="text" name="name" id="name">
-          </div>
-          <div><label for="last-name">votre nom :</label><input required type="text" name="last-name" id="last-name">
-          </div>
-          <div><label for="email">votre email :</label><input required type="email" name="email" id="email"></div>
-        </fieldset>
-        <fieldset>
-          <legend>quel est la raison de votre venu ?</legend>
-          <div>
-            <label for="detendre">besoin de me détendre</label>
-            <input type="checkbox" name="reasons" id="detendre">
-          </div>
-          <div><label for="medecin">mon médecin ma conseillé de venir</label><input type="checkbox" name="reasons"
-              id="medecin"></div>
-          <div><label for="friends">je veux tester avec des amis</label><input type="checkbox" name="reasons"
-              id="friends">
-          </div>
-        </fieldset>
-        <fieldset>
-          <legend>voulez-vous souscrire à notre programme de fidélité ?</legend>
-          <div>
-            <label for="yes">oui</label>
-            <input type="radio" name="fidelity" id="yes" value="true" aria-selected="true">
-          </div>
-          <div><label for="false">non</label><input type="radio" name="fidelity" id="false" value="false">
-          </div>
-        </fieldset>
-        <fieldset>
-          <legend>comment avez-vous connu le yoga ?</legend>
-          <select name="know">
-            <option value="none" hidden disabled selected>choisissez une réponse</option>
-            <option value="internet">par internet</option>
-            <option value="friends">par des amis</option>
-            <option value="school">par l'école</option>
-          </select>
-        </fieldset>
-        <button type="submit">envoyer</button>
-      </form>
-    </section>
+    <article>
+      <h2><span>Ōsu Kannon Temple</span><span>Cosplay Parade !</span></h2>
+      <img src="./img/wcs-cosplay.jpg" alt="wcs cosplay">
+      <p>C’est la dernière parade du WCS, et elle circule entre le temple et la Ôsu Shopping Street. Je suis arrivée à
+        9h
+        pour me
+        placer tranquillement, et la parade commençait à 10h (ponctualité japonaise, bonjour!) Mais déjà à cette
+        heure-là,
+        c’était plein à craquer! Heureusement que je suis un mini-pouce, j’ai réussi à me faxer jusqu’en première ligne
+        et
+        à
+        voyager entre le temple et la rue commerçante pour avoir plusieurs photos à des endroits différents. Mais la
+        foule
+        nippone, surtout pour du cosplay, c’est tout un concept.
+      </p>
+      <p>J’ai été super contente de découvrir toutes les teams (sauf les 8 pré-élues aux rounds de Tokyo) qui allaient «
+        s’affronter » le soir-même à la finale, mais également une belle troupe d’alumnis – d’anciens participants et
+        gagnants
+        aux WCS dont certains que j’admire tout particulièrement! Mais également des cosplayers amateurs venus parader
+        avec
+        toute la clique avec des choix de costume parfois très réussis, parfois très originaux.
+      </p>
+    </article>
   </main>
   <footer><img src="./img/logovert.png" alt="logo eden school"><small>copyright Eden School</small></footer>
   <script type="module" src="/main.js"></script>
