--- a/index.html
+++ b/index.html
@@ -191,7 +191,11 @@
       </p>
     </article>
   </main>
-  <footer><img src="./img/logovert.png" alt="logo eden school"><small>copyright Eden School</small></footer>
+  <footer>
+    <img src="./img/logovert.png" alt="logo eden school">
+    <small>copyright Eden School</small>
+    <small>Source: COSPLAY TIME #4 – On était au World Cosplay Summit 2019!</small>
+  </footer>
   <script type="module" src="/main.js"></script>
 </body>
 
